@startuml

title __P04_ZHONGJIEZHE's Class Diagram__\n

  namespace com.baoge.designpattern {
    namespace xingweixing {
      namespace p04_zhongjiezhe {
        class com.baoge.designpattern.xingweixing.p04_zhongjiezhe.Client {
            {static} + main()
        }
      }
    }
  }
  

  namespace com.baoge.designpattern {
    namespace xingweixing {
      namespace p04_zhongjiezhe {
        abstract class com.baoge.designpattern.xingweixing.p04_zhongjiezhe.Colleague {
            + Colleague()
        }
      }
    }
  }
  

  namespace com.baoge.designpattern {
    namespace xingweixing {
      namespace p04_zhongjiezhe {
        class com.baoge.designpattern.xingweixing.p04_zhongjiezhe.ConcreteColleagueA {
            + ConcreteColleagueA()
            + depMethod()
            + selfMethod()
        }
      }
    }
  }
  

  namespace com.baoge.designpattern {
    namespace xingweixing {
      namespace p04_zhongjiezhe {
        class com.baoge.designpattern.xingweixing.p04_zhongjiezhe.ConcreteColleagueB {
            + ConcreteColleagueB()
            + depMethod()
            + selfMethod()
        }
      }
    }
  }
  

  namespace com.baoge.designpattern {
    namespace xingweixing {
      namespace p04_zhongjiezhe {
        class com.baoge.designpattern.xingweixing.p04_zhongjiezhe.ConcreteMediator {
            + doSomething()
        }
      }
    }
  }
  

  namespace com.baoge.designpattern {
    namespace xingweixing {
      namespace p04_zhongjiezhe {
        abstract class com.baoge.designpattern.xingweixing.p04_zhongjiezhe.Mediator {
            {abstract} + doSomething()
            + getConcreteColleagueA()
            + getConcreteColleagueB()
            + setConcreteColleagueA()
            + setConcreteColleagueB()
        }
      }
    }
  }
  

  com.baoge.designpattern.xingweixing.p04_zhongjiezhe.Colleague o-- com.baoge.designpattern.xingweixing.p04_zhongjiezhe.Mediator : mediator
  com.baoge.designpattern.xingweixing.p04_zhongjiezhe.ConcreteColleagueA -up-|> com.baoge.designpattern.xingweixing.p04_zhongjiezhe.Colleague
  com.baoge.designpattern.xingweixing.p04_zhongjiezhe.ConcreteColleagueB -up-|> com.baoge.designpattern.xingweixing.p04_zhongjiezhe.Colleague
  com.baoge.designpattern.xingweixing.p04_zhongjiezhe.ConcreteMediator -up-|> com.baoge.designpattern.xingweixing.p04_zhongjiezhe.Mediator
  com.baoge.designpattern.xingweixing.p04_zhongjiezhe.Mediator o-- com.baoge.designpattern.xingweixing.p04_zhongjiezhe.ConcreteColleagueA : concreteColleagueA
  com.baoge.designpattern.xingweixing.p04_zhongjiezhe.Mediator o-- com.baoge.designpattern.xingweixing.p04_zhongjiezhe.ConcreteColleagueB : concreteColleagueB


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
